--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -32,7 +32,7 @@
       margin: 1em 0;
       text-decoration: none;
       color: #fff;
-      background-color: #315EFB;
+      background-color: red;
       border-radius: 80px;
       font-size: 0.9em;
       
